--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -233,6 +233,16 @@
 			<a href="https://humanfinny.neocities.org" target="_blank"><img src="!g/humanfinny.gif" alt="humanfinny"></a>
 			<a href="https://softscars.neocities.org/" target="_blank"><img src="https://softscars.neocities.org/buttons/ssbutton.png" alt="softscars"></a>
 			<a href="https://evilperson.neocities.org/" target="_blank"><img src="!g/evilperson.gif" alt="evilperson"></a>
+			<a href="https://hasu.moe/" target="_blank" rel="noopener noreferrer"><img src="!g/hasu.gif" alt="hasu.moe"></a>
+			<a href="https://birdwrongs.sh/"><img src="!g/birdwrongs.png" alt="birdwrongs"></a>
+			<a href="https://floralchai.neocities.org/"><img src="!g/floralchai.png" alt="floralchai"></a>
+			<!-- <a href=""><img src="" alt=""></a>
+			<a href=""><img src="" alt=""></a>
+			<a href=""><img src="" alt=""></a>
+			<a href=""><img src="" alt=""></a>
+			<a href=""><img src="" alt=""></a>
+			<a href=""><img src="" alt=""></a>
+			<a href=""><img src="" alt=""></a> -->
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
