new journal log + minor fixes around site

--- a/doqmeat/journal/archive.html
+++ b/doqmeat/journal/archive.html
@@ -71,6 +71,8 @@ coded with love by des
     </center>
     <h3>logs</h3>
     <ol reversed>
+      <li class="life"><a href="2025/12.html#18">winter break stars!</a></li>
+      <li class="life"><a href="2025/11.html#">connection</a></li>
       <li class="uni life"><a href="2025/09.html">my 4th uni semester</a></li>
       <li class="life"><a href="2025/07.html#25">to be seen</a></li>
       <li class="life interests coding"><a href="2025/07.html#6">my 5th sickening of the year</a></li>
