--- a/doqmeat/music/mini-pages/depression-cherry-booklet.html
+++ b/doqmeat/music/mini-pages/depression-cherry-booklet.html
@@ -24,7 +24,7 @@
     <h2>depression cherry custom booklet</h2>
     <p>one day i was bored out of my ass so i make <i>depression cherry</i> a custom made booklet so i could read along the lyrics as the CD plays :) this album includes a booklet but it only has pictures of roses, no lyrics.</p>
     <p>obviously inspired by the original booklet, and the whole red and rose theming this thing has going on. none of the pictures i used in the making of this are mine and i basically got them from google... all i did was put it all together.</p>
-    <p>you can download the .docx file and print it yourself <a title="dropbox link" href="https://www.dropbox.com/scl/fo/oihls0fyekyp0t1aj2q8g/h?rlkey=3w3xemsxkkndkflxn1bt1wl59&dl=0:" target="_blank" class="outlink">here!</a></p>
+    <p>you can download the .docx file and print it yourself <a title="ko-fi link" href="https://ko-fi.com/s/eee25e8e22" target="_blank" class="outlink">here!</a></p>
     <p>things used: <a href="https://youtu.be/qEODnWRyfcU" target="_blank" class="outlink">this youtube video</a> on how to make an album booklet, <a href="https://www.photopea.com/" target="_blank">photopea</a>, and ms word for printing and formatting.</p>
     <img loading="lazy" src="/art/!g/misc/depression-cherry-booklet/2.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
     <img loading="lazy" src="/art/!g/misc/depression-cherry-booklet/3.jpg" alt="custom made booklet of beach house' depression cherry" width="100%">
