--- a/doqmeat/shrines/mizu/index.html
+++ b/doqmeat/shrines/mizu/index.html
@@ -230,6 +230,8 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 		</div>
 
 		<div id="gallery" class="text-bbl">
+			<h3>mizu updates since writing this shrine!</h3>
+			<p>visited him during <b>july 2024</b> and <b>december 2025</b>! some of the pics below are from those visits.</p>
 			<h3>extra pics of mizu</h3>
 
 			<div class="container">
@@ -269,7 +271,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 		</div>
 
 		<div id="footer" class="text-bbl">
-			<p>last updated: 21.jun.24</p>
+			<p>last updated: 18.dec.25</p>
 			<p><b>resources used in this page:</b> cursor from <a href="https://www.cursors-4u.com" target="_blank">cursors 4u</a>, basiic font by <a href="https://cinni.net/?z=/font" target="_blank">cinni</a></p>
 		</div>
 
