--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -165,11 +165,11 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<p><span class="title">playing: </span> silksong</p>
-					<p><span class="title">watching: </span> jojo (part 4), smiling friends (season 3), fionna and cake (season 2), pluribus</p>
-					<p><span class="title">reading: </span> oddysey</p>
+					<p><span class="title">playing: </span> silksong, style savvy</p>
+					<p><span class="title">watching: </span> jojo (part 4), fionna and cake (season 2), fallout (season 2)</p>
+					<p><span class="title">reading: </span> n/a</p>
 					<p><span class="title">working on: </span> updating site, new f2u template</p>
-					<p class="date">last updated: 14.nov.25</p>
+					<p class="date">last updated: 18.dec.25</p>
 				</section>
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
