new microblog post

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -78,6 +78,9 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>24.dec.25 - 12am</b> started trying to configure doqmeat.com through 11ty and NOPE! i don't think i want to deal with that. i feel like this site just has so much stuff that if i want to implement something like i have to start from 0. for now i am stuck with copying and pasting pages and you know what? what's okay... </p>
+				</article>
+				<article>
 					<p><b>08.dec.25 - 1am</b> kinda wanna put my entire site through a static site generator bc it would make pages like <a href="/vgs">vgs</a>, <a href="/journal">journal</a>, <a href="/blog">blog</a>, <a href="/music">music</a> so much easier and i can stop relying on iframes as well but the thought of having to deal with THE REST of my site on a SSG just gives me nightmares.... so... i'm not quite sure what to do. the only SSG that i have knowledge on is 11ty and but man it would be so greatttt if i could use it for the other pages... maybe i'll figure it out one day. i need to test it out first of all.</p>
 				</article>
 				<article>
