--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -69,6 +69,7 @@
 				<li><a href="/collection/stickers" target="_parent">stickers</a></li>
 				<li><a href="/collection/cats" target="_parent">cat pics</a></li>
 				<li><a href="/collection/plushies/index.html" target="_parent">plushies</a></li>
+				<li><a href="/collection/picrews/index.html" target="_parent">picrews</a> <img src="/!g/pix/new1.gif" alt="new page"></li>
 			</ul>
 			<li><b>media logs</b></li>
 			<ul>
