picrews page done!

--- a/doqmeat/collection/index.html
+++ b/doqmeat/collection/index.html
@@ -34,7 +34,7 @@ https://coolors.co/fbeaf0-f48286-f04a4f-fedfcf
 				<li><a href="plushies/index.html">plushies</a></li>
 				<li><a href="/music/cds/index.html">CDs</a></li>
 				<li><a href="/tv#blu-ray">blu-rays & DVDs</a></li>
-				<li>picrews</li>
+				<li><a href="picrews/index.html">picrews</a> <img src="/!g/pix/new1.gif" alt="new page"></li>
 			</ul>
 			<!-- 		container end div -->
 		</div>
