--- a/doqmeat/collection/picrews/index.html
+++ b/doqmeat/collection/picrews/index.html
@@ -66,10 +66,10 @@
     <pic><a href="https://picrew.me/ja/image_maker/152665" target="_blank"><img src="assets/24.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/257476" target="_blank"><img src="assets/25.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/257476" target="_blank"><img src="assets/25.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/251735" target="_blank"><img src="assets/26.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/251735" target="_blank"><img src="assets/26.png" alt="">
       </a></pic>
 
     <pic><a href="https://picrew.me/ja/image_maker/321535" target="_blank"><img src="assets/27.png" alt="">
@@ -100,10 +100,10 @@
     <pic><a href="https://picrew.me/ja/image_maker/210483" target="_blank"><img src="assets/35.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/586561" target="_blank"><img src="assets/36.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/586561" target="_blank"><img src="assets/36.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/457566" target="_blank"><img src="assets/37.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/457566" target="_blank"><img src="assets/37.png" alt="">
       </a></pic>
 
     <pic><a href="https://picrew.me/ja/image_maker/108636" target="_blank"><img src="assets/38.png" alt="">
@@ -112,19 +112,19 @@
     <pic><a href="https://picrew.me/ja/image_maker/644129" target="_blank"><img src="assets/39.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/701767/" target="_blank"><img src="assets/40.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/701767/" target="_blank"><img src="assets/40.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/952771" target="_blank"><img src="assets/41.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/952771" target="_blank"><img src="assets/41.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/952771" target="_blank"><img src="assets/42.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/952771" target="_blank"><img src="assets/42.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/191322/" target="_blank"><img src="assets/43.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/191322/" target="_blank"><img src="assets/43.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/455830/" target="_blank"><img src="assets/44.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/455830/" target="_blank"><img src="assets/44.png" alt="">
       </a></pic>
 
     <pic><a href="https://picrew.me/ja/image_maker/332600" target="_blank"><img src="assets/45.png" alt="">
@@ -166,13 +166,13 @@
     <pic><a href="https://picrew.me/ja/image_maker/659432" target="_blank"><img src="assets/57.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/1088964/" target="_blank"><img src="assets/58.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/1088964/" target="_blank"><img src="assets/58.png" alt="">
       </a></pic>
 
     <pic><a href="https://picrew.me/ja/image_maker/1306309" target="_blank"><img src="assets/59.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/1128274" target="_blank"><img src="assets/60.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/1128274" target="_blank"><img src="assets/60.png" alt="">
       </a></pic>
 
     <pic><a href="https://picrew.me/ja/image_maker/1413742" target="_blank"><img src="assets/61.png" alt="">
@@ -202,14 +202,14 @@
     <pic><a href="https://picrew.me/en/image_maker/1322863/" target="_blank"><img src="assets/69.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/1944831/" target="_blank"><img src="assets/70.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/1944831/" target="_blank"><img src="assets/70.png" alt="">
       </a>
     </pic>
 
     <pic><a href="https://picrew.me/ja/image_maker/657302" target="_blank"><img src="assets/71.png" alt="">
       </a></pic>
 
-    <pic><a href="https://picrew.me/ja/image_maker/1553437" target="_blank"><img src="assets/72.jpg" alt="">
+    <pic><a href="https://picrew.me/ja/image_maker/1553437" target="_blank"><img src="assets/72.png" alt="">
       </a></pic>
 
     <pic><a href="https://picrew.me/en/image_maker/1220677" target="_blank"><img src="assets/73.png" alt="">
@@ -223,7 +223,7 @@
       </a></pic>
 
 
-    <pic><a href="https://picrew.me/en/image_maker/2212965/" target="_blank"><img src="assets/75.jpg" alt="">
+    <pic><a href="https://picrew.me/en/image_maker/2212965/" target="_blank"><img src="assets/75.png" alt="">
       </a></pic>
 
     <pic><a href="https://picrew.me/en/image_maker/1404698" target="_blank"><img src="assets/76.png" alt="">
