bunch of minor changes

--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -227,6 +227,7 @@
 			<a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="!g/website4.gif"></a>
 			<a href="https://keysklubhouse.com/home" target="_blank"><img src="!g/cringeisded.gif"></a>
 			<img src="!g/layout.gif">
+			<img src="!g/mspainttoolbar.gif" alt="ms paint color toolbar">
 
 		</div>
 
@@ -298,7 +299,7 @@
 	</div>
 
 	<footer>
-		<p>last updated on: <b>11.dec.25</b></p>
+		<p>last updated on: <b>24.dec.25</b></p>
 		<p>page built with materials by <a href="https://foollovers.com/" target="_blank">foollovers</a> and bg by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a></p>
 		<a href="/collection">collection</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
