--- a/doqmeat/faq/index.html
+++ b/doqmeat/faq/index.html
@@ -68,6 +68,8 @@
       last updated on <b>15.aug.25</b>
       <br>
       <a href="#top">top</a> / <a href="/">home</a> / <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;">got another question?</a>
+      <br>
+      <b>credit:</b> bg from <a href="https://web.archive.org/web/20030801072521/http://graphicgard.topcities.com/PageSets.html" target="_blank" rel="noopener noreferrer">marsha's graphic garden</a>
     </footer>
   </main>
 </body>
