--- a/doqmeat/notebook/resources/bookmarks.html
+++ b/doqmeat/notebook/resources/bookmarks.html
@@ -35,6 +35,8 @@
 			<li><a href="http://theoldnet.com" target="_blank">the old net</a> - navigate the internet during different years</li>
 			<li><a href="https://ihavenotv.com/" target="_blank">ihavenotv</a> - a website that links you documentaries to watch.</li>
 			<li><a href="https://remoji.com/" target="_blank">remoji</a> - make lines with emojis with your cursor</li>
+			<li><a href="https://www.lexie.land/dist/SI26.html" target="_blank">multi-layered recursion</a> - make recursive fractal trees with CSS</li>
+			<li><a href="https://writtenkitten.co/" target="_blank">written kitten</a> - shows you a kitten the more you write!</li>
 		</ul>
 
 		<h3 id="comm">communities</h3>
@@ -58,6 +60,8 @@
 
 		<h3 id="music-links">music</h3>
 		<ul>
+			<li><a href="https://poolsuite.net/" target="_blank">poolsuite</a></li>
+			<li><a href="https://ambient.garden/" target="_blank">ambient.garden</a></li>
 			<li><a href="http://www.rpgamers.net/radio/" target="_blank">RPGamers Radio</a> - radio for video game osts</li>
 			<li><a href="https://www.tree.fm/">tree.fm</a> - listen to a forest!</li>
 			<li><a href="https://www.lofiatc.com/?icao=kphx" target="_blank">lo-fi air traffic control</a></li>
@@ -66,8 +70,18 @@
 			<li><a href="https://lucida.to/" target="_blank">lucida.to</a> - an easy way to download music</li>
 		</ul>
 
+		<h3 id="software">software / coding</h3>
+		<ul>
+			<li><a href="https://wiki.lineageos.org/" target="_blank">lineageOS</a> - OS for various devices that you can "hack", i have it pending for my very old <a href="https://wiki.lineageos.org/devices/gtowifi/" target="_blank">samsung tablet</a></li>
+			<li><a href="https://overthewire.org/wargames/bandit/bandit1.html" target="_blank">overthewire</a> - puzzle you have to solve through your terminal</li>
+			<li><a href="https://meodai.github.io/pro-color-harmonies/" target="_blank">pro color harmonies</a></li>
+			<li><a href="https://typst.app/" target="_blank">typst</a></li>
+			<li><a href="https://svelte.dev/" target="_blank">svelte</a></li>
+		</ul>
+
 		<h3 id="games">games</h3>
 		<ul>
+			<li><a href="https://twinery.org/2/#/" target="_blank">twinery</a></li>
 			<li><a href="https://www.balatrodle.com/" target="_blank">balatrodle</a></li>
 			<li><a href="https://vibes.fish/" target="_blank">vibes.fish</a></li>
 			<li><a href="https://make.bitsy.org/" target="_blank">bitsy</a> - game editor for HTML</li>
@@ -79,12 +93,18 @@
 			<li><a href="https://wiiu.hacks.guide/#/" target="_blank">wiiu.hacks.guide</a> / <a href="https://wiki.agilly1989.xyz/books/wiiu" target="_blank">another guide</a> / <a href="https://wii.hacks.guide/vwii-homebrew-channel" target="_blank">vwii modding</a></li>
 		</ul>
 
+		<h3>language</h3>
+		<ul>
+			<li><a href="https://jisho.org/" target="_blank">jisho</a> - japanese dictionary</li>
+		</ul>
+
 		<h3>reading</h3>
 		<ul>
 			<li><a href="https://gist.github.com/cemerson/043d3b455317d762bb1378aeac3679f3" target="_blank">Archive.org Scanned Book Downloader Bookmarklet</a></li>
 		</ul>
 		<h4 id="articles">articles</h4>
 		<ul>
+			<li><a href="https://www.nngroup.com/articles/state-switch-buttons/" target="_blank">State-Switch Controls: The Infamous Case of the "Mute" Button</a> and <a href="https://www.nngroup.com/articles/icon-usability/" target="_blank">Icon Usability</a></li>
 			<li><a href="https://yesterweb.org/no-to-web3/" target="_blank">say no to web3</a></li>
 			<li><a href="https://www.cs.cmu.edu/~sef/sefSmiley.htm" target="_blank">smiley :) lore</a></li>
 			<li><a href="https://randomwire.com/why-japanese-web-design-is-so-different/" target="_blank">why japanese web design is so different</a></li>
@@ -127,6 +147,8 @@
 
 		<h4 id="webrings">webrings</h4>
 		<ul>
+			<li><a href="https://vivivi.leprd.space/webmastery/webring/" target="_blank">How to make a webring</a></li>
+			<li><a href="https://garlic.garden/onionring/" target="_blank">onionring.js</a></li>
 			<li><a href="https://pixelsafari.neocities.org/webring/" target="_blank">resource ring</a></li>
 			<li><a href="https://bisexualism.emeowly.gay/" target="_blank">bisexualism webring</a></li>
 			<li><a title="also has resources!" href="https://pinkvampyr.leprd.space/accessiblenet/" target="_blank">Accessible Net</a></li>
