--- a/doqmeat/notebook/resources/graphics.html
+++ b/doqmeat/notebook/resources/graphics.html
@@ -191,6 +191,7 @@
 		<h2 id="pix">pixels</h2>
 
 		<h3 id="fav">favicons</h3>
+		<img src="/!g/pix/fish-icon.webp">
 		<img src="/!g/pix/dress.gif">
 		<img src="/!g/pix/flower-purple.gif">
 		<img src="/!g/pix/exclamation.gif">
