--- a/doqmeat/notebook/resources/index.html
+++ b/doqmeat/notebook/resources/index.html
@@ -81,7 +81,8 @@
     </ul>
     <h3 id="code-misc">misc</h3>
     <ul>
-      <li><a href="https://www.checklist.design" target="_blank">checklist.design</a> - more in the professional / marketting side of things but it's a website with checklists of what to have on a site.</li>
+      <li><a href="https://derekkedziora.com/blog/dark-mode-revisited" target="_blank">dark mode revisited</a> - nice article that explains how to implement a dark mode into your website!</li>
+      <li><a href="https://www.checklist.design" target="_blank">checklist.design</a> - more in the professional / marketing side of things but it's a website with checklists of what to have on a site.</li>
       <li><a href="https://roadmap.sh/" target="_blank">roadmap.sh</a> - developer roadmaps! they have one for frontend and backend!</li>
       <li><a href="https://www.electronjs.org/" target="_blank">electron</a> - build desktop apps with html / css / js</li>
       <li><a href="https://ohmyposh.dev/" target="_blank">oh my posh</a> - customize your terminal of choice, i use currently use this for <a href="git-bash.jpg">mine</a>!</li>
@@ -122,6 +123,7 @@
 
     <h3 id="css">CSS</h3>
     <ul>
+      <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Guides/Backgrounds_and_borders/Border-image_generator" target="_blank" rel="noopener noreferrer">dev mozilla's border-image generator</a></li>
       <li><a href="https://specificity.keegan.st/" target="_blank">specificity calculator</a></li>
       <li><a href="https://www.w3schools.com/cssref/index.php" target="_blank">w3schools CSS reference</a></li>
       <li><a href="https://css-pattern.com/graph-paper/" target="_blank">CSS patterns</a></li>
@@ -301,6 +303,7 @@
     <h3 id="img-F2U">sites with F2U materials</h3>
 
     <ul>
+      <li><a href="https://toyhou.se/28003922.f2u-pixel-deco" target="_blank">hsin's f2u pixels</a></li>
       <li><a href="https://phosphoricons.com/?size=16" target="_blank">phosphoricons</a> - icons</li>
       <li><a href="https://www.flickr.com/photos/kawaiiscans/albums" target="_blank">kawaiiscans</a> - scans of cute notepads</li>
       <li><a href="https://foollovers.com/" target="_blank">foollovers.com</a> - site with pixels, bgs, dividers, templates, etc</li>
