--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -234,8 +234,18 @@
 			<a href="https://softscars.neocities.org/" target="_blank"><img src="https://softscars.neocities.org/buttons/ssbutton.png" alt="softscars"></a>
 			<a href="https://evilperson.neocities.org/" target="_blank"><img src="!g/evilperson.gif" alt="evilperson"></a>
 			<a href="https://hasu.moe/" target="_blank" rel="noopener noreferrer"><img src="!g/hasu.gif" alt="hasu.moe"></a>
-			<a href="https://birdwrongs.sh/"><img src="!g/birdwrongs.png" alt="birdwrongs"></a>
-			<a href="https://floralchai.neocities.org/"><img src="!g/floralchai.png" alt="floralchai"></a>
+			<a href="https://birdwrongs.sh/" target="_blank"><img src="!g/birdwrongs.png" alt="birdwrongs"></a>
+			<a href="https://floralchai.neocities.org/" target="_blank"><img src="!g/floralchai.png" alt="floralchai"></a>
+			<a href="https://joro.nu/" target="_blank"><img src="!g/joroki.gif" alt="joroki"></a>
+			<a href="https://kuroi.com.br/" target="_blank"><img src="!g/kuroi.png" alt="kuroi"></a>
+			<a href="https://moonside-inn.neocities.org/" target="_blank"><img src="!g/moonside-inn.png" alt="moonside-inn"></a>
+			<a href="https://monsterousseas.neocities.org/" target="_blank" rel="noopener noreferrer"><img src="!g/paracosm.JPEG" alt="paracosm"></a>
+			<a href="https://soapbubbleseal.net/" target="_blank"><img src="!g/soapbubbleseal.gif" alt="soapbubbleseal"></a>
+			<a href="https://sweetfish.site/" target="_blank"><img src="!g/sweetfish.site.png" alt="sweetfish"></a>
+			<a href="https://umetnina.neocities.org/" target="_blank"><img src="!g/umetnina.png" alt="umetnina"></a>
+			<a href="https://vulpecula.neocities.org/" target="_blank"><img src="!g/vulpecula.gif" alt="vulpecula"></a>
+			<a href="https://projectc190.teacake.org/" target="_blank"><img src="!g/project190.gif" alt="projectc190"></a>
+			<a href="https://sunnytea.org/" target="_blank" rel="noopener noreferrer"><img src="!g/sunnytea.gif" alt="sunnytea"></a>
 			<!-- <a href=""><img src="" alt=""></a>
 			<a href=""><img src="" alt=""></a>
 			<a href=""><img src="" alt=""></a>
@@ -267,7 +277,8 @@
 			<a href="https://l0r3z.net" target="_blank">l0rez</a> /
 			<a href="https://catmothcrow.neocities.org/" target="_blank">catmothcrow</a> /
 			<a href="https://jessiechannel.neocities.org/" target="_blank">jessiechannel</a> /
-			<a href="https://jackieis.online/" target="_blank">jackieis.online</a>
+			<a href="https://jackieis.online/" target="_blank">jackieis.online</a> /
+			<a href="https://kiaroou.neocities.org" target="_blank">kiaroo</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> others</h3>
@@ -288,6 +299,7 @@
 			<a href="https://mooncandy.neocities.org/" target="_blank"><img src="!g/mooncandy.gif" alt="mooncandy"></a>
 			<a href="https://k0nfette.neocities.org/" target="_blank"><img src="!g/k0nfette.gif" alt="k0nfette"></a>
 			<a href="https://lucida.to/" target="_blank"><img src="!g/lucida.png" alt="lucida"></a>
+			<a href="https://www.proteidaes.com/" target="_blank" rel="noopener noreferrer"><img src="!g/proteidaes.png" alt="proteidaes"></a>
 		</div>
 
 		<p><a href="https://www.ippotsk.com/" target="_blank">ippotsk.com</a></p>
@@ -353,6 +365,7 @@
 			<a title="hallowdaze" href="https://hallowdaze.neocities.org/" target="_blank"><img src="!g/hallowdaze.gif"></a>
 			<a title="space bar" href="https://space-bar.neocities.org" target="_blank"><img src="!g/space-bar.jpg"></a>
 			<a title="japanese postcard shop site! has a ton of beautiful illustrations by different artists" href="https://wadouraku.co.jp" target="_blank"><img src="!g/wadouraku.gif"></a>
+			<a href="https://vibes.fish/" target="_blank"><img src="!g/vibes.fish.gif" alt="vibes.fish"></a>
 		</div>
 
 		<div class="banner">
