--- a/doqmeat/notebook/resources/fonts.html
+++ b/doqmeat/notebook/resources/fonts.html
@@ -41,6 +41,10 @@
 <p class="font" style="font-family:x;font-size:19px;"><a href="" target="_blank" >x</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 -->
 
+		<p class="font" style="font-family:klee one reg;font-size:19px;"><a href="https://fonts.google.com/specimen/Klee+One" target="_blank">klee one</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
+
+		<p class="font" style="font-family:klee one bold;font-size:19px;"><a href="https://fonts.google.com/specimen/Klee+One" target="_blank">klee one (semi bold)</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
+
 		<p class="font" style="font-family:dot gothic;font-size:15px;"><a href="https://fonts.google.com/specimen/DotGothic16" target="_blank">DotGothic16</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
 
 		<p class="font" style="font-family:pixelhandwriting;font-size:19px;"><a href="https://www.pentacom.jp/pentacom/bitfontmaker2/gallery/?id=556" target="_blank">Owls N' Ink</a><br>A B C D E F G H I J K L M N O P Q R S T U V W X Y Z <br> a b c d e f g h i j k l m n o p q r s t u v w x y z <br> 0 1 2 3 4 5 6 7 8 9 ! ? @ # &#38; % ^ &#38; * ( ) = + </p>
